--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <main></main>
+
+    <!-- Load CCapture BEFORE sketch.js -->
+    <script src="https://cdn.jsdelivr.net/npm/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
+
     <script src="sketch.js"></script>
   </body>
 </html>
