--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
+
   <body>
     <main></main>
 
-    <!-- Load CCapture BEFORE sketch.js -->
-    <script src="https://cdn.jsdelivr.net/npm/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
 
+    <!-- Keep your sketch -->
     <script src="sketch.js"></script>
   </body>
 </html>
